fix(info-grid): fixes spacing for non-grid supported browsers

--- a/css/_component.info-grid.css
+++ b/css/_component.info-grid.css
@@ -5,10 +5,13 @@
 	padding: 0;
 
 	& li {
-		margin-top: 0;
 		list-style-type: none;
 		font-size: ms(-1) em;
 		line-height: var(--line-height-heading);
+
+		@supports (display: grid) {
+			margin-top: 0;
+		}
 
 		& * + * {
 			margin-top: 0;
